fixed horizontal scroll bar??

--- a/css/styles.css
+++ b/css/styles.css
@@ -305,9 +305,14 @@ body {
 
 /* Media query for 1080p */
 @media only screen and (min-width: 769px) and (max-width: 1080px) {
-    body {
-        width: 100vw;
-        overflow-x: hidden;
+    /* body {
+        width: 100%;
+        max-width: 100vw;
+        
+    } */
+    .main-section {
+        margin-left: 4rem;
+        /* width: 100vw; */
     }
     .hello-section {
         margin-top: 6rem;
@@ -318,7 +323,7 @@ body {
     }
     /* Image scaling for project section */
     .preview-image {
-        max-width: 90vw;
+        max-width: 80vw;
     }
     /* hide mobile navbar */
     .mobile-navbar {
@@ -326,8 +331,7 @@ body {
     }
     .top-nav {
         /* width: 90vw; */
-        width: 94vw;
-        /* margin-left: 4rem; */
+        width: 90vw;
         background-color: #36393F;
         z-index: 1;
     }
